trajet qui s'affiche + liste des véhicules dans le front en moche